--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="mt-4 text-left text-gray-400 text-sm space-y-4">
                 <div>
                     <h3 class="font-semibold text-white mb-1">Overview</h3>
-                    <p>This tool finds the shortest travel path between a start system and all other systems within a given radius based on direct, point-to-point distances. It does not take into account stargates or smartgates. Therefore, it is best used for generating an optimal route for a ship's jump drive, particularly for navigating dense collections of stars (like those near a trinary system) or other areas with otherwise unconnected systems.</p>
+                    <p>This Eve Frontier tool finds the shortest travel path between a start system and all other systems within a given radius based on direct, point-to-point distances. It does not take into account stargates or smartgates. Therefore, it is best used for generating an optimal route for a ship's jump drive, particularly for navigating dense collections of stars (like those near a trinary system) or other areas with otherwise unconnected systems.</p>
                 </div>
                 <div>
                     <h3 class="font-semibold text-white mb-1">Optimization Parameters</h3>
@@ -384,3 +384,4 @@
     </script>
 </body>
 </html>
+
